cmake_minimum_required (VERSION 3.0.0)

set(CMAKE_CXX_COMPILER /usr/bin/g++)
set(CMAKE_CXX_FLAGS "-std=c++1z")

include_directories(./include)

project (course)
add_executable(	course
                #max_element_if.cpp)
                #log.cpp)
                #sort_by.cpp)
                #update_field.cpp)
                #print_values.cpp)
                #uniq_id.cpp)
                #table.cpp)
                #deque_vectors.cpp)
                #paginator.cpp)
                #sort_students.cpp)
                #learner.cpp)
                #expresses.cpp)
                #ebook.cpp)
                #booking.cpp)
                #object_pool.cpp)
                #swap_sort_copy.cpp)
                simple_vector.cpp)
